--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,7 +6,7 @@
   position: relative;
   height: 142px;
   padding-top: 40px;
-  z-index: $z-index-2;
+  z-index: $z-index-3;
 }
 
 .heading-logo {
