--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -11,7 +11,7 @@
 
   position: sticky;
   top: 0;
-  z-index: $z-index-1;
+  z-index: $z-index-2;
 
   nav {
     height: 53px;
