--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -17,4 +17,4 @@ $z-index-8: 800;
 $z-index-9: 900;
 $z-index-10: 1000;
 
-$hash-tag-links-padding: 80px;
+$hash-tag-links-padding: 75px;
